cmake_minimum_required (VERSION 2.6)
project (optimizer)
SET(CMAKE_CXX_FLAGS "-std=c++11 -pthread")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/3rdParty/Eigen")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include")
add_library(cmaes SHARED src/cmaes.cpp)
add_library(rosenbrock SHARED src/rosenbrock.cpp)
add_library(tinyxml2 SHARED ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tinyXML/tinyxml2.h ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/tinyXML/tinyxml2.cpp)
add_executable(main src/main.cpp)
target_link_libraries(main cmaes rosenbrock tinyxml2)
